# sql-query-engine

./: LICENSE  README.md  luigi.cfg  main.py  pizza_set.json  pyproject.toml  script_for_cloud.sh  test_commands.txt  tpc-h.json
data/: Eats.csv  Frequents.csv  Person.csv  Serves.csv
ra2mr/: Eats.json  Frequents.json  Person.json  Serves.json  ra2mr.py
ra2mr/tests/: test_e2e.py
ra2spark/: ra2spark.py
raopt/: __init__.py  raopt.py
sql2ra/: __init__.py  functionality.py
tests/: test_e2e.py  test_ra2mr.py  test_raopt.py  test_sql2ra.py
utils/: tbl_to_csv.py  tbl_to_json.py
